--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.3",
