--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
     "next": "13.1.6",
     "react": "18.2.0",
