--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "dotenv": "^16.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "jsonwebtoken": "^9.0.0",
+    "jose": "^4.12.0",
     "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
     "next": "13.1.6",
@@ -42,7 +43,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "husky": "^8.0.3",
