--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
-    "cookie": "^0.5.0",
+    "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
@@ -41,7 +41,6 @@
     "@commitlint/config-conventional": "^17.4.3",
     "@testing-library/react": "^14.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/cookie": "^0.5.1",
     "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
