--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
 MONGO_URI="mongoDB URI"
 MONGO_TEST_URI="mongoDB URI for jest testing"
-JWT_SECRET="used to sign the JWT"
+JWE_SECRET="a secret base64url encoded 256-bit Encryption Key"
